# TitaniumScript

./: Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml  nextest.toml
.github/workflows/: ci.yml
crates/bench/: Cargo.toml
crates/bench/benches/: lex.rs
crates/crates_tests/: Cargo.toml
crates/crates_tests/src/lexer/: byte.rs  byte_str.rs  char.rs  comments.rs  float.rs  mod.rs  num.rs  raw_byte_str.rs  raw_str.rs  str.rs
crates/crates_tests/src/parser/: grammar.rs  inline.rs  lex.rs  mod.rs  parser.rs
crates/crates_tests/test_data/lexer/err/: empty_exponent.tast  empty_exponent.tis  empty_int.tis  empty_int.txt  unstarted_raw_byte_string_at_eof.tast  unstarted_raw_byte_string_with_ascii.txt  unstarted_raw_string_at_eof.txt  unstarted_raw_string_with_ascii.tast  unstarted_raw_string_with_ascii.txt
crates/crates_tests/test_data/lexer/ok/: byte_strings.tis  byte_strings.txt  keywords.tast  keywords.tis  numbers.tast  numbers.tis  single_line_comments.tast  single_line_comments.tis  strings.tis  strings.txt
crates/crates_tests/test_data/parser/err/: 0024_many_type_parens.tast  0024_many_type_parens.tis
crates/crates_tests/test_data/parser/ok/: 0018_struct_type_params.tast  0018_struct_type_params.tis  0020_type_param_bounds.tast  0020_type_param_bounds.tis  0056_neq_in_type.tast  0056_neq_in_type.tis  0069_multi_trait_object.tast  0069_multi_trait_object.tis
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  token_kind.rs
crates/lexer/src/tests/: mod.rs
crates/lexer/src/tests/lexing/: byte.rs  byte_str.rs  char.rs  comments.rs  float.rs  mod.rs  num.rs  raw_byte_str.rs  raw_str.rs  str.rs
crates/limit/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: grammar.rs  lexed_str.rs  lib.rs  parser.rs  tests.rs
crates/parser/src/grammar/: expressions.rs  generic_args.rs  generic_params.rs  items.rs  params.rs  types.rs
crates/parser/src/grammar/expressions/: atom.rs
crates/parser/src/grammar/items/: traits.rs
crates/parser/src/syntax_kind/: generated.rs
crates/parser/src/tests/: prefix_entries.rs  top_entries.rs
crates/parser/test_data/parser/inline/ok/: 0075_label.rs
crates/profile/: Cargo.toml
crates/stdx/src/: non_empty_vec.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: algo.rs  ast.rs  lib.rs  ptr.rs  ted.rs  tests.rs  utils.rs
crates/syntax/src/ast/: edit.rs  edit_in_place.rs  expr_ext.rs  make.rs  node_ext.rs  token_ext.rs  traits.rs
crates/syntax/src/parsing/: reparsing.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: expect.rs  fixture.rs  lib.rs
tasks/: Cargo.toml
tasks/src/: badges.rs  ci.rs  flags.rs  grammar.rs  main.rs
tasks/src/ci/: generate.rs  parse_data.rs
tasks/src/grammar/: ast.rs  extract.rs  generate.rs  lib.rs  lower.rs  titaniumscript.ungram  utils.rs
