[package]
name = "task"
version = "0.1.0"
publish = false
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
anyhow = "1.0.62"
ungrammar = "1.16.1"

flate2 = "1.0.24"
write-json = "0.1.2"
xshell = "0.2.2"
xflags = "0.3.0"
time = { version = "0.3", default-features = false }
zip = { version = "0.6", default-features = false, features = [
    "deflate",
    "time",
] }
quote = "1.0.20"
proc-macro2 = "1.0.47"
itertools = "0.10.5"
colorgrad = "0.6.2"
badge-maker = "0.3.1"
quick-xml = "0.28.1"
# Avoid adding more dependencies to this crate
