[package]
name = "bench_lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
criterion = "0.4"
rustc_lexer = { version = "727.0.0", package = "rustc-ap-rustc_lexer" }
lexer.workspace = true

[[bench]]
name = "lex"
harness = false