[package]
name = "parser"
version = "0.0.0"
description = "TBD"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
drop_bomb = "0.1.5"
lexer.workspace = true
limit.workspace = true
similar-asserts = "1.4.2"

[dev-dependencies]
expect-test = "1.4.0"
test-utils.workspace = true
